--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 # Python dependencies for AI Documentation Vector Database Hybrid Scraper
+# Using uv for ultra-fast package management with Python 3.13+
 
 # Core web crawling and scraping
 crawl4ai[all]>=0.6.0
@@ -18,7 +19,7 @@ python-dotenv>=1.0.0
 colorlog>=6.7.0
 tqdm>=4.65.0
 
-# Optional: Enhanced performance
+# Enhanced performance with latest versions
 playwright>=1.40.0
 httpx>=0.25.0
 
@@ -26,9 +27,12 @@ httpx>=0.25.0
 pytest>=7.4.0
 pytest-asyncio>=0.21.0
 black>=23.0.0
-flake8>=6.0.0
+ruff>=0.7.0
 
-# Additional dependencies for specific features
+# Additional dependencies for modern Python features
 pydantic>=2.0.0
 click>=8.1.0
 rich>=13.0.0
+
+# Note: Install with uv for best performance:
+# uv add crawl4ai[all] qdrant-client openai pandas numpy python-dotenv
