--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,31 +23,38 @@ classifiers = [
 ]
 
 dependencies = [
-    "crawl4ai[all]>=0.6.0",
-    "qdrant-client>=1.7.0",
-    "openai>=1.0.0",
-    "aiohttp>=3.8.0",
-    "pandas>=2.0.0",
-    "numpy>=1.24.0",
-    "python-dotenv>=1.0.0",
-    "colorlog>=6.7.0",
-    "tqdm>=4.65.0",
-    "playwright>=1.40.0",
-    "httpx>=0.25.0",
-    "pydantic>=2.0.0",
-    "click>=8.1.0",
-    "rich>=13.0.0",
+    "crawl4ai[all]>=0.6.3",
+    "qdrant-client[fastembed]>=1.14.2",
+    "openai>=1.82.0",
+    "aiohttp>=3.11.18",
+    "pandas>=2.2.3",
+    "numpy>=2.2.6",
+    "python-dotenv>=1.1.0",
+    "colorlog>=6.9.0",
+    "tqdm>=4.67.1",
+    "playwright>=1.52.0",
+    "httpx>=0.28.1",
+    "pydantic>=2.11.5",
+    "click>=8.2.1",
+    "rich>=14.0.0",
     "asyncio-throttle>=1.0.2",
+    "fastembed>=0.7.0",
+    "FlagEmbedding>=1.3.4",
+    "firecrawl-py>=2.7.0",
+    "tree-sitter>=0.24.0",
+    "tree-sitter-python>=0.23.6",
+    "tree-sitter-javascript>=0.23.1",
+    "tree-sitter-typescript>=0.23.2",
 ]
 
 [project.optional-dependencies]
 dev = [
-    "pytest>=7.4.0",
-    "pytest-asyncio>=0.21.0",
-    "pytest-cov>=4.1.0",
-    "pytest-mock>=3.11.0",
-    "black>=23.0.0",
-    "ruff>=0.7.0",
+    "pytest>=8.3.5",
+    "pytest-asyncio>=0.26.0",
+    "pytest-cov>=6.1.1",
+    "pytest-mock>=3.14.0",
+    "black>=25.1.0",
+    "ruff>=0.11.11",
 ]
 
 [project.urls]
