--- a/requirements.txt
+++ b/requirements.txt
@@ -3,46 +3,48 @@
 # Using uv for ultra-fast package management with Python 3.13+
 
 # Core web crawling and scraping
-crawl4ai[all]>=0.6.0
-aiohttp>=3.8.0
+crawl4ai[all]>=0.6.3
+aiohttp>=3.11.18
 asyncio-throttle>=1.0.2
 
 # SOTA 2025 Vector database and embeddings (research-backed stack)
-qdrant-client[fastembed]>=1.7.0  # Hybrid search support with FastEmbed integration
-openai>=1.0.0
-fastembed>=0.2.5  # 50% faster than PyTorch, better than OpenAI ada-002
-FlagEmbedding>=1.3.0  # BGE-reranker-v2-m3 for 10-20% accuracy improvement
-firecrawl-py>=0.0.8  # Premium extraction features (optional)
+qdrant-client[fastembed]>=1.14.2  # Hybrid search support with FastEmbed integration
+openai>=1.82.0
+fastembed>=0.7.0
+FlagEmbedding>=1.3.4  # BGE-VL multimodal support (2025), 10-20% accuracy improvement
+firecrawl-py>=2.7.0  # Premium extraction features (optional)
 
 # Data processing and analysis
-pandas>=2.0.0
-numpy>=1.24.0
+pandas>=2.2.3
+numpy>=2.2.6
 
 # SOTA 2025 AST-based chunking (Phase 2)
-tree-sitter>=0.21.0
-tree-sitter-python>=0.21.0
-tree-sitter-javascript>=0.21.0
-tree-sitter-typescript>=0.21.0
+tree-sitter>=0.24.0
+tree-sitter-python>=0.23.6
+tree-sitter-javascript>=0.23.1
+tree-sitter-typescript>=0.23.2
 
 # Utilities and logging
-python-dotenv>=1.0.0
-colorlog>=6.7.0
-tqdm>=4.65.0
+python-dotenv>=1.1.0
+colorlog>=6.9.0
+tqdm>=4.67.1
 
 # Enhanced performance with latest versions
-playwright>=1.40.0
-httpx>=0.25.0
+playwright>=1.52.0
+httpx>=0.28.1
 
 # Development and testing
-pytest>=7.4.0
-pytest-asyncio>=0.21.0
-black>=23.0.0
-ruff>=0.7.0
+pytest>=8.3.5
+pytest-asyncio>=0.26.0
+pytest-cov>=6.1.1
+pytest-mock>=3.14.0
+black>=25.1.0
+ruff>=0.11.11
 
 # Additional dependencies for modern Python features
-pydantic>=2.0.0
-click>=8.1.0
-rich>=13.0.0
+pydantic>=2.11.5
+click>=8.2.1
+rich>=14.0.0
 
 # SOTA 2025 Installation Notes:
 # =============================
