feat(cache): implement intelligent caching layer for V1 MVP
- Add two-tier cache architecture with L1 local cache and L2 Redis cache
- Implement LRU eviction with memory-based limits for local cache
- Add content-based cache keys using MD5 hashing with provider/model/dimensions
- Support TTL configuration for embeddings (24h), crawls (1h), and queries (2h)
- Add Redis async support with connection pooling and retry strategies
- Implement compression for Redis values above 1KB threshold
- Add basic metrics tracking hits, misses, and hit rates (V1 MVP)
- Support pattern-based cache invalidation
- Integrate caching into EmbeddingManager with smart model selection
- Add comprehensive test suite with 90%+ coverage
- Update configuration with cache settings
- Fix .gitignore to allow src/services/cache directory

V2 features (cache warming, Prometheus metrics, semantic similarity caching) deferred to TODO-V2.md

Closes #13

--- a/.gitignore
+++ b/.gitignore
@@ -86,7 +86,7 @@ crawl4ai_scraper.log
 # Project specific
 config/local_*.json
 temp/
-cache/
+/cache/
 .crawl4ai_cache/
 
 # Node.js (if using any JS tools)
