--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,7 +45,8 @@ dependencies = [
     "tree-sitter-python>=0.23.6",
     "tree-sitter-javascript>=0.23.1",
     "tree-sitter-typescript>=0.23.2",
-    "fastmcp>=0.4.11",
+    "redis[hiredis]>=5.3.0",
+    "fastmcp>=2.5.0",
     "uvicorn>=0.34.0",
 ]
 
