--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -68,7 +68,7 @@ services:
       - production
 
 networks:
-  sota-vector-network:
+  advanced-vector-network:
     driver: bridge
     driver_opts:
       com.docker.network.driver.mtu: 1500
