chore: update environment variable configurations in .env.example and .env.test
- Enhanced .env.example with clearer descriptions and additional API keys for Qdrant and Firecrawl.
- Updated .env.test to include new test configurations and mock values for various services, ensuring compatibility with the latest application settings.
- Simplified and organized sections for better readability and maintainability.

These changes improve clarity and usability of environment configurations, adhering to the KISS principle by making the setup process straightforward for developers

--- a/.env.example
+++ b/.env.example
@@ -1,125 +1,150 @@
 # AI Documentation Vector DB - Environment Variables Template
 # Copy this file to .env and replace the placeholder values with your actual API keys
 
-# ========== Required API Keys ==========
+# ========== Core API Keys ==========
 
-# OpenAI API Key (required for embeddings)
+# OpenAI API Key (required for OpenAI embeddings)
 # Get your key at: https://platform.openai.com/api-keys
-OPENAI_API_KEY=your_openai_api_key_here
+OPENAI_API_KEY=sk-your-openai-api-key-here
 
-# Firecrawl API Key (optional, for premium scraping features)
+# Firecrawl API Key (optional, for premium web scraping features)
 # Get your key at: https://www.firecrawl.dev/
-FIRECRAWL_API_KEY=your_firecrawl_api_key_here
-
-# ========== Database Configuration ==========
-
-# Qdrant Vector Database URL
-QDRANT_URL=http://localhost:6333
-
-# Redis Cache URL (optional, for caching)
-REDIS_URL=redis://localhost:6379
-
-# ========== Application Configuration ==========
-
-# Application Environment (development, testing, production)
-AI_DOCS__ENVIRONMENT=development
-
-# Debug Mode (true/false)
-AI_DOCS__DEBUG=true
-
-# Log Level (DEBUG, INFO, WARNING, ERROR, CRITICAL)
-AI_DOCS__LOG_LEVEL=INFO
-
-# ========== Provider Configuration ==========
-
-# Default Embedding Provider (openai, fastembed)
-AI_DOCS__EMBEDDING_PROVIDER=fastembed
-
-# Default Crawl Provider (crawl4ai, firecrawl)
-AI_DOCS__CRAWL_PROVIDER=crawl4ai
-
-# ========== Performance Configuration ==========
-
-# Maximum concurrent crawl operations
-AI_DOCS__PERFORMANCE__MAX_CONCURRENT_CRAWLS=10
-
-# Maximum concurrent embedding operations
-AI_DOCS__PERFORMANCE__MAX_CONCURRENT_EMBEDDINGS=32
-
-# Request timeout in seconds
-AI_DOCS__PERFORMANCE__REQUEST_TIMEOUT=30
-
-# ========== Cache Configuration ==========
-
-# Enable caching (true/false)
-AI_DOCS__CACHE__ENABLE_CACHING=true
-
-# Enable local memory cache (true/false)
-AI_DOCS__CACHE__ENABLE_LOCAL_CACHE=true
-
-# Enable Redis cache (true/false)
-AI_DOCS__CACHE__ENABLE_REDIS_CACHE=false
-
-# Cache TTL for embeddings (seconds)
-AI_DOCS__CACHE__TTL_EMBEDDINGS=86400
-
-# Cache TTL for crawl results (seconds)
-AI_DOCS__CACHE__TTL_CRAWL=3600
-
-# ========== OpenAI Configuration ==========
-
-# OpenAI API Key (same as above, alternative format)
-AI_DOCS__OPENAI__API_KEY=your_openai_api_key_here
-
-# OpenAI Model for embeddings
-AI_DOCS__OPENAI__EMBEDDING_MODEL=text-embedding-3-small
-
-# OpenAI API Base URL (optional, for custom endpoints)
-# AI_DOCS__OPENAI__API_BASE=https://api.openai.com/v1
-
-# ========== Qdrant Configuration ==========
-
-# Qdrant URL (same as above, alternative format)
-AI_DOCS__QDRANT__URL=http://localhost:6333
+FIRECRAWL_API_KEY=fc-your-firecrawl-api-key-here
 
 # Qdrant API Key (optional, for Qdrant Cloud)
-# AI_DOCS__QDRANT__API_KEY=your_qdrant_api_key_here
+# Leave empty for local Qdrant instance
+QDRANT_API_KEY=
 
-# Default collection name
+# ========== Service URLs ==========
+
+# Qdrant Vector Database URL
+# Default: http://localhost:6333 (local Docker instance)
+QDRANT_URL=http://localhost:6333
+
+# Redis/DragonflyDB Cache URL
+# Default: redis://localhost:6379 (local DragonflyDB instance)
+REDIS_URL=redis://localhost:6379
+
+# ========== FastMCP Streaming Configuration ==========
+# These settings optimize MCP server performance for large search results
+
+# Transport type: streamable-http (optimal) or stdio (Claude Desktop)
+FASTMCP_TRANSPORT=streamable-http
+
+# Host for HTTP transport (only used with streamable-http)
+FASTMCP_HOST=127.0.0.1
+
+# Port for HTTP transport (only used with streamable-http)
+FASTMCP_PORT=8000
+
+# Response buffer size in bytes (default: 8192)
+# Increase for better performance with large results
+FASTMCP_BUFFER_SIZE=8192
+
+# Maximum response size in bytes (default: 10485760 = 10MB)
+# Increase if working with very large search results
+FASTMCP_MAX_RESPONSE_SIZE=10485760
+
+# ========== Unified Configuration (AI_DOCS__ prefix) ==========
+# These use the AI_DOCS__ prefix for nested configuration
+
+# Application Settings
+AI_DOCS__ENVIRONMENT=development              # development, testing, production
+AI_DOCS__DEBUG=false                          # Enable debug mode
+AI_DOCS__LOG_LEVEL=INFO                       # DEBUG, INFO, WARNING, ERROR, CRITICAL
+
+# Provider Selection
+AI_DOCS__EMBEDDING_PROVIDER=fastembed         # fastembed (local) or openai (cloud)
+AI_DOCS__CRAWL_PROVIDER=crawl4ai              # crawl4ai (fast) or firecrawl (premium)
+
+# Performance Tuning
+AI_DOCS__PERFORMANCE__MAX_CONCURRENT_CRAWLS=10
+AI_DOCS__PERFORMANCE__MAX_CONCURRENT_EMBEDDINGS=32
+AI_DOCS__PERFORMANCE__REQUEST_TIMEOUT=30
+AI_DOCS__PERFORMANCE__MAX_MEMORY_USAGE_MB=1000
+
+# Cache Configuration
+AI_DOCS__CACHE__ENABLE_CACHING=true
+AI_DOCS__CACHE__ENABLE_LOCAL_CACHE=true       # In-memory caching
+AI_DOCS__CACHE__ENABLE_REDIS_CACHE=true       # DragonflyDB caching
+AI_DOCS__CACHE__REDIS_URL=redis://localhost:6379
+AI_DOCS__CACHE__TTL_EMBEDDINGS=86400          # 24 hours
+AI_DOCS__CACHE__TTL_CRAWL=3600                # 1 hour
+AI_DOCS__CACHE__TTL_QUERIES=7200              # 2 hours
+AI_DOCS__CACHE__TTL_HYDE=14400                # 4 hours
+
+# OpenAI Settings (when using OpenAI provider)
+AI_DOCS__OPENAI__API_KEY=sk-your-openai-api-key-here
+AI_DOCS__OPENAI__EMBEDDING_MODEL=text-embedding-3-small
+AI_DOCS__OPENAI__DIMENSIONS=1536
+# AI_DOCS__OPENAI__API_BASE=https://api.openai.com/v1  # Optional custom endpoint
+
+# Qdrant Settings
+AI_DOCS__QDRANT__URL=http://localhost:6333
+AI_DOCS__QDRANT__API_KEY=                     # For Qdrant Cloud
 AI_DOCS__QDRANT__DEFAULT_COLLECTION=documentation
+AI_DOCS__QDRANT__GRPC_PORT=6334               # For high-performance gRPC
+AI_DOCS__QDRANT__USE_GRPC=false               # Enable gRPC instead of HTTP
 
-# ========== Firecrawl Configuration ==========
-
-# Firecrawl API Key (same as above, alternative format)
-AI_DOCS__FIRECRAWL__API_KEY=your_firecrawl_api_key_here
-
-# Firecrawl API Base URL
+# Firecrawl Settings (when using Firecrawl provider)
+AI_DOCS__FIRECRAWL__API_KEY=fc-your-firecrawl-api-key-here
 AI_DOCS__FIRECRAWL__API_BASE=https://api.firecrawl.dev
 
-# ========== Security Configuration ==========
-
-# Maximum query length
+# Security Configuration
 AI_DOCS__SECURITY__MAX_QUERY_LENGTH=1000
-
-# Maximum URL length
 AI_DOCS__SECURITY__MAX_URL_LENGTH=2048
-
-# Rate limiting (requests per minute)
 AI_DOCS__SECURITY__RATE_LIMIT_REQUESTS_PER_MINUTE=60
+AI_DOCS__SECURITY__ALLOWED_DOMAINS=["*"]      # JSON array of allowed domains
+AI_DOCS__SECURITY__REQUIRE_API_KEYS=true
+AI_DOCS__SECURITY__ENABLE_RATE_LIMITING=true
 
-# ========== Directory Configuration ==========
+# Directory Paths
+AI_DOCS__DATA_DIR=./data                      # Persistent data storage
+AI_DOCS__CACHE_DIR=./cache                    # Temporary cache files
+AI_DOCS__LOGS_DIR=./logs                      # Application logs
 
-# Data directory for storing files
-AI_DOCS__DATA_DIR=./data
+# HyDE (Hypothetical Document Embeddings) Configuration
+AI_DOCS__HYDE__ENABLED=true
+AI_DOCS__HYDE__MODEL=gpt-3.5-turbo
+AI_DOCS__HYDE__MAX_TOKENS=150
+AI_DOCS__HYDE__TEMPERATURE=0.7
 
-# Cache directory for temporary files
-AI_DOCS__CACHE_DIR=./cache
+# Chunking Strategy Configuration
+AI_DOCS__CHUNKING__STRATEGY=enhanced           # basic, enhanced, or ast
+AI_DOCS__CHUNKING__MAX_CHUNK_SIZE=1600
+AI_DOCS__CHUNKING__MIN_CHUNK_SIZE=200
+AI_DOCS__CHUNKING__OVERLAP=200
 
-# Logs directory for application logs
-AI_DOCS__LOGS_DIR=./logs
+# Batch Processing
+AI_DOCS__BATCH__EMBEDDING_BATCH_SIZE=100
+AI_DOCS__BATCH__CRAWL_BATCH_SIZE=50
+AI_DOCS__BATCH__ENABLE_PROGRESS_BAR=true
 
-# ========== Development/Testing ==========
+# ========== Docker Compose Environment Variables ==========
+# These are used by docker-compose.yml for Qdrant and DragonflyDB
 
-# Test API keys (use fake values for testing)
-# AI_DOCS__TEST__OPENAI_API_KEY=sk-test-key-for-testing-only
-# AI_DOCS__TEST__FIRECRAWL_API_KEY=fc-test-key-for-testing-only
+# Qdrant Performance Settings
+QDRANT__SERVICE__HTTP_PORT=6333
+QDRANT__SERVICE__GRPC_PORT=6334
+QDRANT__LOG_LEVEL=INFO
+QDRANT__STORAGE__ON_DISK_PAYLOAD=true
+QDRANT__STORAGE__QUANTIZATION__ALWAYS_RAM=true
+QDRANT__STORAGE__PERFORMANCE__MAX_SEARCH_THREADS=8
+
+# DragonflyDB Settings
+DRAGONFLY_THREADS=8
+DRAGONFLY_MEMORY_LIMIT=4gb
+DRAGONFLY_SNAPSHOT_INTERVAL=3600
+
+# ========== Testing Environment Variables ==========
+# These are used for integration tests
+
+# Enable real integration tests (default: false for safety)
+RUN_REAL_INTEGRATION_TESTS=false
+
+# Crawl4AI timeout for tests (milliseconds)
+CRAWL4AI_TIMEOUT=30000
+
+# Test API keys (use these exact values for unit tests)
+# AI_DOCS__TEST__OPENAI_API_KEY=sk-test-mock-key-for-testing-only
+# AI_DOCS__TEST__FIRECRAWL_API_KEY=fc-test-mock-key-for-testing-only
