--- a/.env.test
+++ b/.env.test
@@ -1,22 +1,109 @@
 # Test environment variables for pytest
-# These are mock values used only for testing
+# These are mock values used only for testing - DO NOT use in production
 
-# API Keys (mock values for testing)
+# ========== Core API Keys (Mock Values) ==========
 OPENAI_API_KEY=sk-test-mock-key-for-testing-only
 FIRECRAWL_API_KEY=fc-test-mock-key-for-testing-only
-
-# Service URLs
-QDRANT_URL=http://localhost:6333
 QDRANT_API_KEY=test-qdrant-key
 
-# Test Configuration
-ENABLE_LOCAL_EMBEDDINGS=true
-LOG_LEVEL=DEBUG
-MAX_RETRIES=3
+# ========== Service URLs ==========
+QDRANT_URL=http://localhost:6333
+REDIS_URL=redis://localhost:6379
+
+# ========== FastMCP Test Configuration ==========
+# Use stdio for tests to avoid network complications
+FASTMCP_TRANSPORT=stdio
+FASTMCP_HOST=127.0.0.1
+FASTMCP_PORT=8001  # Different port to avoid conflicts
+FASTMCP_BUFFER_SIZE=4096
+FASTMCP_MAX_RESPONSE_SIZE=1048576  # 1MB for tests
+
+# ========== Test-Specific Settings ==========
+# Enable real integration tests (set to true to run against real services)
+RUN_REAL_INTEGRATION_TESTS=false
+
+# Test timeouts
+CRAWL4AI_TIMEOUT=30000  # 30 seconds
 REQUEST_TIMEOUT=30
 
-# Rate Limiting (more aggressive for testing)
+# ========== AI_DOCS__ Prefixed Test Configuration ==========
+# Application Settings
+AI_DOCS__ENVIRONMENT=testing
+AI_DOCS__DEBUG=true
+AI_DOCS__LOG_LEVEL=DEBUG
+
+# Use local providers for testing
+AI_DOCS__EMBEDDING_PROVIDER=fastembed
+AI_DOCS__CRAWL_PROVIDER=crawl4ai
+
+# Performance Settings (reduced for testing)
+AI_DOCS__PERFORMANCE__MAX_CONCURRENT_CRAWLS=2
+AI_DOCS__PERFORMANCE__MAX_CONCURRENT_EMBEDDINGS=4
+AI_DOCS__PERFORMANCE__REQUEST_TIMEOUT=10
+AI_DOCS__PERFORMANCE__MAX_MEMORY_USAGE_MB=500
+
+# Cache Configuration (simplified for testing)
+AI_DOCS__CACHE__ENABLE_CACHING=true
+AI_DOCS__CACHE__ENABLE_LOCAL_CACHE=true
+AI_DOCS__CACHE__ENABLE_REDIS_CACHE=false
+AI_DOCS__CACHE__REDIS_URL=redis://localhost:6379
+AI_DOCS__CACHE__TTL_EMBEDDINGS=300     # 5 minutes
+AI_DOCS__CACHE__TTL_CRAWL=300          # 5 minutes
+AI_DOCS__CACHE__TTL_QUERIES=300        # 5 minutes
+AI_DOCS__CACHE__TTL_HYDE=300           # 5 minutes
+
+# OpenAI Test Settings
+AI_DOCS__OPENAI__API_KEY=sk-test-mock-key-for-testing-only
+AI_DOCS__OPENAI__EMBEDDING_MODEL=text-embedding-3-small
+AI_DOCS__OPENAI__DIMENSIONS=1536
+
+# Qdrant Test Settings
+AI_DOCS__QDRANT__URL=http://localhost:6333
+AI_DOCS__QDRANT__API_KEY=test-qdrant-key
+AI_DOCS__QDRANT__DEFAULT_COLLECTION=test_documents
+AI_DOCS__QDRANT__GRPC_PORT=6334
+AI_DOCS__QDRANT__USE_GRPC=false
+
+# Firecrawl Test Settings
+AI_DOCS__FIRECRAWL__API_KEY=fc-test-mock-key-for-testing-only
+AI_DOCS__FIRECRAWL__API_BASE=https://api.firecrawl.dev
+
+# Security Settings (relaxed for testing)
+AI_DOCS__SECURITY__MAX_QUERY_LENGTH=1000
+AI_DOCS__SECURITY__MAX_URL_LENGTH=2048
+AI_DOCS__SECURITY__RATE_LIMIT_REQUESTS_PER_MINUTE=100
+AI_DOCS__SECURITY__ALLOWED_DOMAINS=["*"]
+AI_DOCS__SECURITY__REQUIRE_API_KEYS=false
+AI_DOCS__SECURITY__ENABLE_RATE_LIMITING=false
+
+# Test Directories
+AI_DOCS__DATA_DIR=./tests/fixtures/data
+AI_DOCS__CACHE_DIR=./tests/fixtures/cache
+AI_DOCS__LOGS_DIR=./tests/fixtures/logs
+
+# HyDE Test Configuration
+AI_DOCS__HYDE__ENABLED=false  # Disabled for most tests
+AI_DOCS__HYDE__MODEL=gpt-3.5-turbo
+AI_DOCS__HYDE__MAX_TOKENS=50
+AI_DOCS__HYDE__TEMPERATURE=0.5
+
+# Chunking Test Configuration
+AI_DOCS__CHUNKING__STRATEGY=basic  # Simple strategy for tests
+AI_DOCS__CHUNKING__MAX_CHUNK_SIZE=500
+AI_DOCS__CHUNKING__MIN_CHUNK_SIZE=100
+AI_DOCS__CHUNKING__OVERLAP=50
+
+# Batch Processing (smaller batches for testing)
+AI_DOCS__BATCH__EMBEDDING_BATCH_SIZE=10
+AI_DOCS__BATCH__CRAWL_BATCH_SIZE=5
+AI_DOCS__BATCH__ENABLE_PROGRESS_BAR=false
+
+# ========== Rate Limiting (Aggressive for Testing) ==========
 RATE_LIMIT_OPENAI_MAX_CALLS=10
 RATE_LIMIT_OPENAI_TIME_WINDOW=1
 RATE_LIMIT_FIRECRAWL_MAX_CALLS=5
 RATE_LIMIT_FIRECRAWL_TIME_WINDOW=1
+
+# ========== Test Helpers ==========
+MAX_RETRIES=3
+ENABLE_LOCAL_EMBEDDINGS=true
