chore: enhance environment variable configurations in .env.example and .env.test
- Added new environment variables for HyDE, Browser Automation, Reranking, Query API, Crawl4AI, and Collection Aliases in both .env.example and .env.test, improving clarity and usability for developers.
- Updated existing variables with clearer descriptions and adjusted test configurations for better isolation and performance.

These changes improve the organization and maintainability of environment configurations, adhering to the KISS principle by making the setup process straightforward for developers

--- a/.env.example
+++ b/.env.example
@@ -108,6 +108,10 @@ AI_DOCS__HYDE__ENABLED=true
 AI_DOCS__HYDE__MODEL=gpt-3.5-turbo
 AI_DOCS__HYDE__MAX_TOKENS=150
 AI_DOCS__HYDE__TEMPERATURE=0.7
+AI_DOCS__HYDE__NUM_GENERATIONS=5            # Number of hypothetical docs to generate
+AI_DOCS__HYDE__CACHE_TTL=3600               # HyDE cache TTL in seconds
+AI_DOCS__HYDE__PREFETCH_LIMIT=50            # Query API prefetch limit for HyDE
+AI_DOCS__HYDE__QUERY_WEIGHT=0.3             # Weight for original query (vs 0.7 for HyDE)
 
 # Chunking Strategy Configuration
 AI_DOCS__CHUNKING__STRATEGY=enhanced           # basic, enhanced, or ast
@@ -119,6 +123,62 @@ AI_DOCS__CHUNKING__OVERLAP=200
 AI_DOCS__BATCH__EMBEDDING_BATCH_SIZE=100
 AI_DOCS__BATCH__CRAWL_BATCH_SIZE=50
 AI_DOCS__BATCH__ENABLE_PROGRESS_BAR=true
+
+# ========== Browser Automation Configuration ==========
+# Used for complex scraping scenarios requiring JavaScript execution
+
+# Browser Automation Hierarchy Settings
+AI_DOCS__BROWSER__DEFAULT_TOOL=crawl4ai      # crawl4ai, stagehand, playwright
+AI_DOCS__BROWSER__ENABLE_FALLBACK=true       # Enable automatic fallback
+AI_DOCS__BROWSER__HEADLESS=true              # Run browsers in headless mode
+AI_DOCS__BROWSER__TIMEOUT=30000              # Page timeout in milliseconds
+
+# Stagehand AI Configuration (for complex dynamic content)
+AI_DOCS__STAGEHAND__MODEL=ollama/llama2      # Local LLM model for AI automation
+AI_DOCS__STAGEHAND__ENABLE_CACHING=true      # Cache AI decisions
+AI_DOCS__STAGEHAND__DEBUG_SCREENSHOTS=false  # Save debug screenshots
+
+# Playwright Configuration (for maximum control)
+AI_DOCS__PLAYWRIGHT__BROWSER=chromium        # chromium, firefox, webkit
+AI_DOCS__PLAYWRIGHT__VIEWPORT_WIDTH=1920     # Browser viewport width
+AI_DOCS__PLAYWRIGHT__VIEWPORT_HEIGHT=1080    # Browser viewport height
+
+# ========== Reranking Configuration ==========
+# BGE-reranker-v2-m3 for 10-20% accuracy improvement
+
+AI_DOCS__RERANKING__ENABLED=false            # Enable reranking (opt-in)
+AI_DOCS__RERANKING__MODEL=BAAI/bge-reranker-v2-m3
+AI_DOCS__RERANKING__TOP_K=20                 # Candidates to rerank
+AI_DOCS__RERANKING__CACHE_TTL=3600           # Cache reranked results for 1 hour
+AI_DOCS__RERANKING__BATCH_SIZE=32            # Reranking batch size
+
+# ========== Query API Configuration ==========
+# Qdrant Query API multi-stage retrieval settings
+
+AI_DOCS__QUERY_API__PREFETCH_LIMIT=100       # Initial prefetch size
+AI_DOCS__QUERY_API__HNSW_EF=128              # HNSW search parameter
+AI_DOCS__QUERY_API__QUANTIZATION_RESCORE=true
+AI_DOCS__QUERY_API__OVERSAMPLING=2.0         # Quantization oversampling
+
+# ========== Crawl4AI Specific Settings ==========
+# High-performance web scraping configuration
+
+AI_DOCS__CRAWL4AI__BROWSER_TYPE=chromium     # Browser to use
+AI_DOCS__CRAWL4AI__MAX_CONCURRENT=10         # Concurrent pages
+AI_DOCS__CRAWL4AI__PAGE_TIMEOUT=30000        # Page load timeout
+AI_DOCS__CRAWL4AI__FETCH_TIMEOUT=10000       # Fetch timeout
+AI_DOCS__CRAWL4AI__USER_AGENT=AIDocs/1.0     # Custom user agent
+AI_DOCS__CRAWL4AI__CACHE_MODE=enabled        # Enable content caching
+AI_DOCS__CRAWL4AI__EXTRACTION_STRATEGY=semantic  # Extraction type
+AI_DOCS__CRAWL4AI__LLM_PROVIDER=ollama/llama2    # LLM for extraction
+
+# ========== Collection Aliases Configuration ==========
+# Production deployment patterns
+
+AI_DOCS__ALIASES__ENABLE_ALIASES=true        # Enable collection aliases
+AI_DOCS__ALIASES__ACTIVE_ALIAS=active        # Active collection alias
+AI_DOCS__ALIASES__STAGING_ALIAS=staging      # Staging collection alias
+AI_DOCS__ALIASES__DEPLOYMENT_STRATEGY=blue_green  # blue_green, canary, ab_test
 
 # ========== Docker Compose Environment Variables ==========
 # These are used by docker-compose.yml for Qdrant and DragonflyDB
