--- a/.env.test
+++ b/.env.test
@@ -86,6 +86,10 @@ AI_DOCS__HYDE__ENABLED=false  # Disabled for most tests
 AI_DOCS__HYDE__MODEL=gpt-3.5-turbo
 AI_DOCS__HYDE__MAX_TOKENS=50
 AI_DOCS__HYDE__TEMPERATURE=0.5
+AI_DOCS__HYDE__NUM_GENERATIONS=3     # Fewer for tests
+AI_DOCS__HYDE__CACHE_TTL=300         # 5 minutes for tests
+AI_DOCS__HYDE__PREFETCH_LIMIT=20     # Smaller prefetch for tests
+AI_DOCS__HYDE__QUERY_WEIGHT=0.3
 
 # Chunking Test Configuration
 AI_DOCS__CHUNKING__STRATEGY=basic  # Simple strategy for tests
@@ -103,6 +107,49 @@ RATE_LIMIT_OPENAI_MAX_CALLS=10
 RATE_LIMIT_OPENAI_TIME_WINDOW=1
 RATE_LIMIT_FIRECRAWL_MAX_CALLS=5
 RATE_LIMIT_FIRECRAWL_TIME_WINDOW=1
+
+# ========== Browser Automation Test Settings ==========
+AI_DOCS__BROWSER__DEFAULT_TOOL=crawl4ai
+AI_DOCS__BROWSER__ENABLE_FALLBACK=false  # Disable for predictable tests
+AI_DOCS__BROWSER__HEADLESS=true
+AI_DOCS__BROWSER__TIMEOUT=10000          # Shorter timeout for tests
+
+AI_DOCS__STAGEHAND__MODEL=test-model     # Mock model for tests
+AI_DOCS__STAGEHAND__ENABLE_CACHING=false
+AI_DOCS__STAGEHAND__DEBUG_SCREENSHOTS=false
+
+AI_DOCS__PLAYWRIGHT__BROWSER=chromium
+AI_DOCS__PLAYWRIGHT__VIEWPORT_WIDTH=1280
+AI_DOCS__PLAYWRIGHT__VIEWPORT_HEIGHT=720
+
+# ========== Reranking Test Configuration ==========
+AI_DOCS__RERANKING__ENABLED=false        # Disabled for speed
+AI_DOCS__RERANKING__MODEL=BAAI/bge-reranker-v2-m3
+AI_DOCS__RERANKING__TOP_K=10             # Smaller for tests
+AI_DOCS__RERANKING__CACHE_TTL=300
+AI_DOCS__RERANKING__BATCH_SIZE=16
+
+# ========== Query API Test Settings ==========
+AI_DOCS__QUERY_API__PREFETCH_LIMIT=50
+AI_DOCS__QUERY_API__HNSW_EF=64           # Lower for tests
+AI_DOCS__QUERY_API__QUANTIZATION_RESCORE=false
+AI_DOCS__QUERY_API__OVERSAMPLING=1.5
+
+# ========== Crawl4AI Test Settings ==========
+AI_DOCS__CRAWL4AI__BROWSER_TYPE=chromium
+AI_DOCS__CRAWL4AI__MAX_CONCURRENT=2      # Limited for tests
+AI_DOCS__CRAWL4AI__PAGE_TIMEOUT=10000
+AI_DOCS__CRAWL4AI__FETCH_TIMEOUT=5000
+AI_DOCS__CRAWL4AI__USER_AGENT=AIDocs-Test/1.0
+AI_DOCS__CRAWL4AI__CACHE_MODE=disabled   # No caching in tests
+AI_DOCS__CRAWL4AI__EXTRACTION_STRATEGY=basic
+AI_DOCS__CRAWL4AI__LLM_PROVIDER=test-llm
+
+# ========== Collection Aliases Test Settings ==========
+AI_DOCS__ALIASES__ENABLE_ALIASES=false   # Disabled for isolation
+AI_DOCS__ALIASES__ACTIVE_ALIAS=test-active
+AI_DOCS__ALIASES__STAGING_ALIAS=test-staging
+AI_DOCS__ALIASES__DEPLOYMENT_STRATEGY=blue_green
 
 # ========== Test Helpers ==========
 MAX_RETRIES=3
