--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,4 @@
-# AI Documentation Vector Database Hybrid Scraper Dependencies
-# Research-backed optimal embedding pipeline with hybrid search capabilities
-# Using uv for ultra-fast package management with Python 3.13+
-
-# Core web crawling and scraping
+# Core web scraping
 crawl4ai[all]>=0.6.3
 firecrawl-py>=2.7.1
 aiohttp>=3.12.4
@@ -11,7 +7,7 @@ asyncio-throttle>=1.0.2
 # Vector database and embeddings
 qdrant-client[fastembed]>=1.14.2
 openai>=1.82.1
-fastembed==0.6.1
+fastembed>=0.6.1,<0.7.0
 FlagEmbedding>=1.3.5
 
 # Data processing and analysis
@@ -37,16 +33,17 @@ redis[hiredis]>=6.2.0
 playwright>=1.52.0
 httpx>=0.28.1
 browser-use>=0.2.5
-langchain-openai>=0.3.15
+langchain-openai>=0.3.11,<0.4.0
 langchain-anthropic>=0.2.16
 langchain-google-genai>=1.0.1
 
 # MCP server & API
 fastmcp>=2.5.2
+mcp>=1.9.1
 uvicorn>=0.34.2
 
 # Configuration and validation
-pydantic>=2.11.5
+pydantic>=2.10.4,<2.11.0
 pydantic-settings>=2.8.0
 click>=8.2.1
 rich>=14.0.0
@@ -54,6 +51,11 @@ rich>=14.0.0
 # Additional dependencies
 pyyaml>=6.0.2
 aiofiles>=24.1.0
+python-multipart>=0.0.12
+sentence-transformers>=3.3.1
+tomli-w>=1.1.0
+onnx>=1.18.0
+onnxruntime>=1.20.1
 
 # Development and testing
 pytest>=8.3.5
@@ -62,25 +64,4 @@ pytest-cov>=6.1.1
 pytest-mock>=3.14.1
 black>=25.1.0
 ruff>=0.11.12
-
-# Installation Notes:
-# ===================
-# 
-# 1. Core installation (required):
-#    uv add crawl4ai[all] "qdrant-client[fastembed]" openai fastembed FlagEmbedding
-#
-# 2. Premium features (optional):
-#    uv add firecrawl-py
-#    export FIRECRAWL_API_KEY="your_key"
-#
-# 3. Expected performance gains:
-#    - 50% faster embedding generation (FastEmbed vs PyTorch)
-#    - 83-99% storage cost reduction (quantization + Matryoshka)
-#    - 8-15% better retrieval accuracy (hybrid search)
-#    - 10-20% additional improvement (BGE reranking on top of hybrid)
-#    - 5x lower API costs (text-embedding-3-small vs ada-002)
-#
-# 4. Research-backed configuration:
-#    - Chunk size: 1600 characters (optimal 400-600 tokens)
-#    - Models: text-embedding-3-small, NV-Embed-v2, BGE-small-en-v1.5
-#    - Search: Hybrid dense+sparse with RRF ranking
+fakeredis>=2.29.0
