--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,13 +33,11 @@ dependencies = [
     # Core web scraping
     "crawl4ai[all]>=0.6.3",
     "firecrawl-py>=2.7.1",
-    
     # Vector database & embeddings
     "qdrant-client[fastembed]>=1.14.2",
     "openai>=1.82.1",
-    "fastembed>=0.6.1,<0.7.0",  # Pin to 0.6.x to avoid breaking changes
+    "fastembed>=0.6.1,<0.7.0", # Pin to 0.6.x to avoid breaking changes
     "FlagEmbedding>=1.3.5",
-    
     # Data processing & ML
     "pandas>=2.2.3",
     "numpy>=2.2.6",
@@ -48,46 +46,40 @@ dependencies = [
     "tree-sitter-python>=0.23.6",
     "tree-sitter-javascript>=0.23.1",
     "tree-sitter-typescript>=0.23.2",
-    
     # HTTP & async
     "aiohttp>=3.12.4",
     "httpx>=0.28.1",
     "asyncio-throttle>=1.0.2",
-    
     # MCP server & API
     "fastmcp>=2.5.2",
     "mcp>=1.9.1",
     "uvicorn>=0.34.2",
-    
     # Browser automation
     "playwright>=1.52.0",
     "browser-use>=0.2.5",
-    "langchain-openai>=0.3.11,<0.4.0",  # Allow minor updates
+    "langchain-openai>=0.3.11,<0.4.0", # Allow minor updates
     "langchain-anthropic>=0.2.16",
     "langchain-google-genai>=1.0.1",
-    
     # Caching
     "redis[hiredis]>=6.2.0",
-    
     # Configuration & validation
-    "pydantic>=2.10.4,<2.11.0",  # Constrained by browser-use dependency
+    "pydantic>=2.10.4,<2.11.0", # Constrained by browser-use dependency
     "pydantic-settings>=2.8.0",
     "python-dotenv>=1.1.0",
-    
     # CLI & UI
     "click>=8.2.1",
     "rich>=14.0.0",
     "colorlog>=6.9.0",
     "tqdm>=4.67.1",
-    
     # Additional dependencies
     "pyyaml>=6.0.2",
     "aiofiles>=24.1.0",
-    "python-multipart>=0.0.12",  # For FastAPI file uploads
-    "sentence-transformers>=3.3.1",  # For reranking models
-    "tomli-w>=1.0.0",  # For TOML writing
-    "onnx>=1.18.0",  # For FastEmbed
-    "onnxruntime>=1.20.1",  # For FastEmbed
+    "python-multipart>=0.0.12", # For FastAPI file uploads
+    "sentence-transformers>=3.3.1", # For reranking models
+    "tomli-w>=1.0.0", # For TOML writing
+    "onnx>=1.18.0", # For FastEmbed
+    "onnxruntime>=1.20.1", # For FastEmbed
+    "jsonschema2md>=1.5.2",
 ]
 
 [project.optional-dependencies]
