--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,8 +50,6 @@ dependencies = [
     "aiohttp>=3.12.4",
     "httpx>=0.28.1",
     "asyncio-throttle>=1.0.2",
-    # MCP server & API
-    "fastmcp>=2.5.2",
     "mcp>=1.9.1",
     "uvicorn>=0.34.2",
     # Browser automation
@@ -80,6 +78,7 @@ dependencies = [
     "onnx>=1.18.0", # For FastEmbed
     "onnxruntime>=1.20.1", # For FastEmbed
     "jsonschema2md>=1.5.2",
+    "mcp-server>=0.1.4",
 ]
 
 [project.optional-dependencies]
