fix: resolve FastMCP dependency conflicts and namespace collision
- Rename src/mcp to src/mcp_tools to avoid collision with MCP SDK package
- Remove problematic sys.path modification that caused import conflicts
- Update all imports and test references to use new mcp_tools namespace
- Fix unified_mcp_server.py to use correct FastMCP parameters
- All 212 MCP tests passing with 90% coverage maintained
- Server now imports and starts successfully with FastMCP 2.6.0

Resolves import issue: 'ModuleNotFoundError: No module named mcp.server'
Root cause: local src/mcp directory shadowed installed mcp package

--- a/requirements.txt
+++ b/requirements.txt
@@ -38,9 +38,9 @@ langchain-anthropic>=0.2.16
 langchain-google-genai>=1.0.1
 
 # MCP server & API
-mcp>=1.9.1
+mcp>=1.9.2,<2.0.0
 uvicorn>=0.34.2
-mcp-server>=0.1.4
+fastmcp>=2.5.2
 
 # Configuration and validation
 pydantic>=2.10.4,<2.11.0
