--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,7 +50,7 @@ dependencies = [
     "aiohttp>=3.12.4",
     "httpx>=0.28.1",
     "asyncio-throttle>=1.0.2",
-    "mcp>=1.9.1",
+    "mcp>=1.9.2,<2.0.0",
     "uvicorn>=0.34.2",
     # Browser automation
     "playwright>=1.52.0",
@@ -78,7 +78,7 @@ dependencies = [
     "onnx>=1.18.0", # For FastEmbed
     "onnxruntime>=1.20.1", # For FastEmbed
     "jsonschema2md>=1.5.2",
-    "mcp-server>=0.1.4",
+    "fastmcp>=2.5.2",
 ]
 
 [project.optional-dependencies]
