refactor\!: remove backwards compatibility, enforce mandatory task queue
BREAKING CHANGE: TaskQueueManager is now required for all core services

- Remove optional task queue parameters from CachePatterns, CanaryDeployment, and QdrantAliasManager
- Replace asyncio.create_task fallbacks with RuntimeError/ServiceError exceptions
- Eliminate dual code paths to reduce complexity and maintenance overhead
- Rewrite task queue test suite without backwards compatibility scenarios
- Fix Redis password precedence logic (config overrides URL password)
- Update all service constructors to require TaskQueueManager as mandatory parameter

Services affected:
- src/services/cache/patterns.py: mandatory task queue for write-behind persistence
- src/services/deployment/canary.py: mandatory task queue for background operations
- src/services/core/qdrant_alias_manager.py: mandatory task queue for safe deletion

Test changes:
- Complete rewrite of tests/unit/services/task_queue/ with 34 passing tests
- Remove backwards compatibility test scenarios
- Simplify mocking strategies for improved maintainability
- Add comprehensive coverage for mandatory task queue architecture

Benefits:
- Reduced code complexity by eliminating optional dependencies
- Improved error handling with explicit failure modes
- Enhanced maintainability through single execution paths
- Better performance by removing runtime checks

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -91,6 +91,41 @@ services:
     networks:
       - advanced-vector-network
 
+  # ARQ task queue worker for background jobs
+  task-worker:
+    build:
+      context: .
+      dockerfile: Dockerfile.worker
+    container_name: task-worker
+    restart: unless-stopped
+    environment:
+      - AI_DOCS_TASK_QUEUE__REDIS_URL=redis://dragonfly:6379
+      - AI_DOCS_TASK_QUEUE__REDIS_DATABASE=1
+      - AI_DOCS_TASK_QUEUE__WORKER_POOL_SIZE=4
+      - AI_DOCS_LOG_LEVEL=INFO
+      - PYTHONPATH=/app/src
+    volumes:
+      - ./src:/app/src:ro
+      - ./config:/app/config:ro
+      - ~/.qdrant_data:/qdrant/storage:z
+    depends_on:
+      - dragonfly
+      - qdrant
+    networks:
+      - advanced-vector-network
+    command: arq src.services.task_queue.worker.WorkerSettings
+    deploy:
+      resources:
+        limits:
+          memory: 2G
+          cpus: "1.0"
+        reservations:
+          memory: 1G
+          cpus: "0.5"
+    profiles:
+      - worker
+      - production
+
   # Optional: Add monitoring for production deployments
   qdrant-exporter:
     image: qdrant/qdrant-exporter:latest
