--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,6 +60,8 @@ dependencies = [
     "langchain-google-genai>=1.0.1",
     # Caching
     "redis[hiredis]>=6.2.0",
+    # Task queue
+    "arq>=0.25.0",
     # Configuration & validation
     "pydantic>=2.10.4,<2.11.0", # Constrained by browser-use dependency
     "pydantic-settings>=2.8.0",
@@ -101,6 +103,7 @@ Issues = "https://github.com/BjornMelin/ai-docs-vector-db-hybrid-scraper/issues"
 scrape-docs = "src.crawl4ai_bulk_embedder:main"
 manage-db = "src.manage_vector_db:main"
 mcp-server = "src.mcp_server:main"
+task-worker = "src.cli_worker:main"
 
 [build-system]
 requires = ["hatchling"]
