--- a/pyproject.toml
+++ b/pyproject.toml
@@ -100,9 +100,8 @@ Repository = "https://github.com/BjornMelin/ai-docs-vector-db-hybrid-scraper"
 Issues = "https://github.com/BjornMelin/ai-docs-vector-db-hybrid-scraper/issues"
 
 [project.scripts]
-scrape-docs = "src.crawl4ai_bulk_embedder:main"
 manage-db = "src.manage_vector_db:main"
-mcp-server = "src.mcp_server:main"
+mcp-server = "src.unified_mcp_server:main"
 task-worker = "src.cli_worker:main"
 
 [build-system]
