--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,7 @@ dependencies = [
     "asyncio-throttle>=1.0.2",
     "mcp>=1.9.2,<2.0.0",
     "uvicorn>=0.34.2",
+    "fastapi>=0.115.0",  # For production API enhancements
     # Browser automation
     "playwright>=1.52.0",
     "browser-use>=0.2.5",
